cleanup & update codebase